Fix social media icon visibility

--- a/css/style.css
+++ b/css/style.css
@@ -207,9 +207,9 @@ figure {
         margin: 0;
         display: inline;
         list-style: none; }
-        #colorlib-aside .colorlib-footer ul li a {
+       /*#colorlib-aside .colorlib-footer ul li a {
           color: rgba(255, 255, 255, 0.3);
-          padding: 4px; }
+          padding: 4px; }*/
           #colorlib-aside .colorlib-footer ul li a:hover, #colorlib-aside .colorlib-footer ul li a:active, #colorlib-aside .colorlib-footer ul li a:focus {
             text-decoration: none;
             outline: none;
